force-app/main/default/objects/Record_Document__c/Record_Document__c.object-meta.xml
<CustomObject>
    <description>Links document items to specific records (Lead or Loan), tracking status and completion of assignments.</description>
    <label>Record Document</label>
    <nameField>
        <displayFormat>RD-{0000}</displayFormat>
        <label>Record Document Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Record Documents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>