force-app/main/default/objects/Record_Document__c/fields/Content_Folder__c.field-meta.xml
<CustomField>
    <fullName>Content_Folder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Content Folder</label>
    <referenceTo>ContentFolder</referenceTo>
    <relationshipLabel>Record Documents</relationshipLabel>
    <relationshipName>Record_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>