force-app/main/default/objects/Record_Document__c/fields/Document_Template_Item__c.field-meta.xml
<CustomField>
    <fullName>Document_Template_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Document Template Item</label>
    <referenceTo>Document_Template_Item__c</referenceTo>
    <relationshipLabel>Record Documents</relationshipLabel>
    <relationshipName>Record_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>