force-app/main/default/objects/Record_Document__c/fields/Loan__c.field-meta.xml
<CustomField>
    <fullName>Loan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Loan</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Record Documents</relationshipLabel>
    <relationshipName>Record_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>