force-app/main/default/objects/Record_Document__c/fields/Uploaded_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Uploaded_DateTime__c</fullName>
    <label>Uploaded DateTime</label>
    <type>DateTime</type>
</CustomField>